--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^19.2.3",
     "recharts": "^3.6.0",
     "@google/genai": "^1.34.0",
+    "@neondatabase/serverless": "^0.10.4",
     "pdfjs-dist": "4.10.38",
     "jszip": "^3.10.1",
     "@vercel/postgres": "^0.10.0",
